[Qt] Fix includes after QtDeclarative -> QtQML renaming https://bugs.webkit.org/show_bug.cgi?id=82195

Relanding r112651, because Qt5 is updated everywhere.

Source/WebKit/qt:

* declarative/experimental/plugin.cpp:
* declarative/plugin.cpp:
(WebKitQmlPlugin::initializeEngine):

Source/WebKit2:

* UIProcess/API/qt/qquicknetworkreply_p.h:
* UIProcess/API/qt/qquicknetworkrequest_p.h:
* UIProcess/API/qt/qquickwebview.cpp:
* UIProcess/API/qt/qquickwebview_p.h:
* UIProcess/API/qt/qwebiconimageprovider_p.h:
* UIProcess/API/qt/qwebnavigationhistory.cpp:
* UIProcess/API/qt/qwebnavigationhistory_p.h:
* UIProcess/API/qt/tests/qquickwebview/tst_qquickwebview.cpp:
* UIProcess/qt/QtDialogRunner.cpp:
(QtDialogRunner::initForAlert):
(QtDialogRunner::initForConfirm):
(QtDialogRunner::initForPrompt):
(QtDialogRunner::initForAuthentication):
(QtDialogRunner::initForProxyAuthentication):
(QtDialogRunner::initForCertificateVerification):
(QtDialogRunner::initForFilePicker):
(QtDialogRunner::initForDatabaseQuotaDialog):
(QtDialogRunner::createDialog):
* UIProcess/qt/WebPopupMenuProxyQt.cpp:
(WebKit::WebPopupMenuProxyQt::createItem):
(WebKit::WebPopupMenuProxyQt::createContext):

Tools:

* MiniBrowser/qt/BrowserWindow.cpp:
(BrowserWindow::updateVisualMockTouchPoints):
* MiniBrowser/qt/main.cpp:
* WebKitTestRunner/qt/PlatformWebViewQt.cpp:
(WTR::WrapperWindow::handleStatusChanged):
* qmake/mkspecs/features/unix/default_post.prf:

Canonical link: https://commits.webkit.org/100666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113330 268f45cc-cd09-0410-ab3c-d52691b4dbfc