Source/WebKit2/UIProcess/API/qt/qwebnavigationhistory_p.h
@@ -31,7 +31,7 @@
 #include <QObject>
 #include <QUrl>
 #include <QVariant>
-#include <qdeclarative.h>
+#include <qqml.h>
 
 class QAbstractListModel;
 class QWebNavigationHistoryPrivate;
