Tools/MiniBrowser/qt/main.cpp
@@ -31,7 +31,7 @@
 #include "MiniBrowserApplication.h"
 #include "UrlLoader.h"
 
-#include <qdeclarative.h>
+#include <qqml.h>
 
 #include <QDir>
 #include <QLatin1String>
